# projectm

./: .libreelec-unpack  CMakeLists.txt  CMakeLists.txt.orig  CPackConfig.cmake  CPackSourceConfig.cmake  Common.hpp  Makefile  PipelineMerger.cpp  PresetLoader.cpp  README.md  RandomNumberGenerators.hpp  TimeKeeper.cpp  cmake_install.cmake  config.inp  libprojectM.pc  libprojectM.pc.in  projectM.cpp  projectM.hpp
.armv8a-libreelec-linux-gnueabi/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
.armv8a-libreelec-linux-gnueabi/MilkdropPresetFactory/: cmake_install.cmake
.armv8a-libreelec-linux-gnueabi/NativePresetFactory/: cmake_install.cmake
.armv8a-libreelec-linux-gnueabi/Renderer/: cmake_install.cmake
MilkdropPresetFactory/: CMakeLists.txt  CustomShape.cpp  CustomWave.cpp  IdlePreset.cpp  InitCondUtils.hpp  Makefile  MilkdropPreset.cpp  MilkdropPresetFactory.cpp  ParamUtils.hpp  Parser.cpp  cmake_install.cmake
NativePresetFactory/: CMakeLists.txt  Makefile  NativePresetFactory.cpp  NativePresetFactory.hpp  cmake_install.cmake
Renderer/: CMakeLists.txt  FBO.cpp  FBO.hpp  Filters.cpp  Makefile  MilkdropWaveform.cpp  MilkdropWaveform.hpp  PerlinNoise.cpp  PerlinNoise.hpp  RenderItemMergeFunction.hpp  Renderable.cpp  Renderer.cpp  Renderer.hpp  ShaderEngine.hpp  TextureManager.cpp  VideoEcho.cpp  Waveform.cpp  cmake_install.cmake
Renderer/SOIL/: SOIL.c  stb_image_aug.c
cmake/: FindFreetype2.cmake  FindOpenGLES2.cmake
